--- a/boxifier.css
+++ b/boxifier.css
@@ -94,13 +94,12 @@
 */
 
 .box_title {
-  top: auto; left: 25%; bottom: 25px;
-  width: 50%; height: auto;
+  top: auto; left: 0; right: 0; bottom: 0;
+  height: auto;
   margin-left: -10px;
   padding: 10px 20px;
   z-index: 100;
 
-  border: 2px solid rgba(204,204,204,0.5);
   background-color: rgba(0,0,0,0.8);
 
   -webkit-border-radius: 8px;
