--- a/boxifier.css
+++ b/boxifier.css
@@ -114,33 +114,30 @@
 
 .box_load {
   display: none;
-
   position: absolute;
   top: 50%; left: 50%;
-  margin: -12px 0 0 -12px;
-
-  width: 20px; height: 20px;
-  border: 5px solid rgba(204,204,204,0.2);
-
-  border-top-color: rgba(204,204,204,0.6);
-  border-right-color: rgba(204,204,204,0.6);
-  border-bottom-color: rgba(204,204,204,0.6);
-
-  -webkit-border-radius: 99px;
-  -moz-border-radius: 99px;
-  border-radius: 99px;
+  margin: -3px 0 0 -25px;
+  width: 50px; height: 6px;
+  font-size: 0;
 }
 
-.box_rotate {
-  -moz-transform: rotate(90deg);
-  -o-transform: rotate(90deg);
-  -webkit-transform: rotate(90deg);
-  transform: rotate(90deg);
+.box_load div {
+  display: inline-block;
+  margin: 0 3px 0 0;
+  width: 6px; height: 6px;
+
+  background-color: rgba(204,204,204,0.3);
+
+  -webkit-border-radius: 9px;
+  -moz-border-radius: 9px;
+  border-radius: 9px;
+
+  -moz-transition: all 0.25s linear;
+  -o-transition: all 0.25s linear;
+  -webkit-transition: all 0.25s linear;
+  transition: all 0.25s linear;
 }
 
-.box_anim {
-  -moz-transition: -moz-transform 0.27s linear;
-  -o-transition: transform 0.27s linear;
-  -webkit-transition: transform 0.27s linear;
-  transition: transform 0.27s linear;
+.highlight {
+  background-color: rgba(204,204,204,0.8) !important;
 }
