--- a/boxifier.css
+++ b/boxifier.css
@@ -18,7 +18,7 @@
   position: absolute;
   top: 0; left: 0;
   width: 100%; height: 100%;
-  background-color: #000;
+  background-color: rgba(0,0,0,0.6);
   overflow: hidden;
 }
 
@@ -34,8 +34,8 @@
 }
 
 .box_viewer {
-  border: 4px solid #7A7A7A; /* IE7 - IE8 */
-  border: 4px solid rgba(204,204,204,0.5);
+  border: 1px solid #7A7A7A; /* IE7 - IE8 */
+  border: 1px solid rgba(204,204,204,0.5);
   box-shadow: 0 0 10px rgba(0,0,0,0.5);
   border-radius: 4px;
   z-index: 999;
